# eduvpn-common

./: .gitattributes  .gitignore  404.html  CHANGES.md  LICENSE  Makefile  README.md  about.html  client.go  client_test.go  custom.css  docker-compose.yml  eduvpncommon.spec  fsm.go  genexportsdoc.py  go.mod  go.sum  index.html  make_release.sh  mermaid-init.js  prepare_release.sh  print.html  searchindex.js  searchindex.json  selenium_eduvpn.py  state.go  state_test.go  sync_translations.sh  update_translation.sh  verify.go  verify_test.go
.github/: dependabot.yml
api/: architecture.html  breaking.html  codeexamples.html  functiondocs.html  index.html  languageinterop.html  letsbuildaclient.html  statemachine.html  typicalflow.html  wheretofinddocs.html
ci/: startcompose.sh
cli/: go.mod  go.sum  main.go
client/: client.go  client_test.go  discovery.go  fsm.go  id.go  proxy.go  proxy_test.go  redirect.go  server.go  token.go  zgotext.go
docs/: book.toml  custom.css  index.md  wrappers.md
exports/: .gitignore  Makefile  common.mk  disco.go  error.h  exports.go  exports.h  exports_test.go  exports_test_wrapper.go  exports_wrapper.go  generate_lib.ps1  platform.mk  server.h  servers.go
gettingstarted/: index.html  testing.html
i18nerr/: i18nerr.go
internal/: api.go  config.go  discovery.go  fsm.go  http.go  log.go  oauth.go  openvpn.go  server.go  util.go  verify.go  verify_test.go  wireguard.go
proxy/: proxy.go
src/: api.go  config.go  discovery.go  error.go  fsm.go  http.go  log.go  oauth.go  openvpn.go  server.go  server_test.go  state.go  util.go  verify.go  verify_test.go  wireguard.go
wrappers/python/: .gitignore  Makefile  README.md  discovery.py  main.py  pyproject.toml  setup.cfg  setup.py  test_discovery.py  tests.py
wrappers/python/docs/source/: api.rst  conf.py  eduvpn_common.rst  getting_started.rst  index.rst  modules.rst
wrappers/python/eduvpn_common/: __init__.py  discovery.py  error.py  event.py  loader.py  main.py  server.py  state.py  types.py
wrappers/python/eduvpncommon/: __init__.py  auth.py  discovery.py  error.py  main.py
wrappers/python/example/: main.py
wrappers/python/src/: __init__.py  discovery.py  event.py  main.py  server.py  state.py
(+301 files in other folders)
