[metadata]
name = eduvpn_common
version = 1.99.2
author = Jeroen Wijenbergh
author_email = jeroen.wijenbergh@geant.org
long_description = README.md
url = https://github.com/eduvpn/eduvpn-common
license = MIT

[options]
packages = eduvpn_common

[options.package_data]
eduvpn_common = lib/*.so, py.typed

[options.extras_require]
lint = ruff
mypy = mypy
