[metadata]
name = eduvpn_common
version = 2.0.1
author = Jeroen Wijenbergh
author_email = jeroen.wijenbergh@geant.org
description = Python wrapper for eduvpn-common, a codebase to build eduVPN clients with
long_description = file: README.md
url = https://github.com/eduvpn/eduvpn-common
license = MIT

[options]
packages = eduvpn_common

[options.package_data]
eduvpn_common = lib/*.so, py.typed

[options.extras_require]
lint = ruff
mypy = mypy
